--- a/package.json
+++ b/package.json
@@ -11,17 +11,21 @@
     "risk",
     "management",
     "portfolio",
-    "mulesoft"
+    "mulesoft",
+    "mcp",
+    "ai-agent"
   ],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "js-yaml": "^4.1.1",
     "morgan": "^1.10.1",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
